--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_EVENT_NAME='OSN INFORMATIKA 2023'
-NEXT_PUBLIC_PD_URL='https://api.tlx.toki.id/api/v2/courses/JIDCOURElTynLFh3mPVc9d7oWFx/chapters/user-progresses',
-NEXT_PUBLIC_PKD_URL='https://api.tlx.toki.id/api/v2/courses/JIDCOURa19cx8dp4uVJabPcPsWN/chapters/user-progresses',
-NEXT_PUBLIC_OSN_URL='https://api.tlx.toki.id/api/v2/problemsets/user-progresses'
+NEXT_PUBLIC_API_URL=https://api.tlx.toki.id/api/v2
+NEXT_PUBLIC_PD_URL=courses/JIDCOURElTynLFh3mPVc9d7oWFx/chapters/user-progresses
+NEXT_PUBLIC_PKD_URL=courses/JIDCOURa19cx8dp4uVJabPcPsWN/chapters/user-progresses
+NEXT_PUBLIC_OSN_URL=problemsets/user-progresses
